refactor: #32 코드 일관성 향상